--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <!-- meta tagen nedan har jag lagt till -->
+    <!-- Added this link after looking at another repo-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -11,7 +11,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- link nedan har jag lagt till -->
+    <!-- Added this link after looking at another repo-->
     <link rel="stylesheet" href="style.css" />
     <link
     href='https://fonts.googleapis.com/css2?family=Imperial+Script&display=swap'
